--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,25 @@
   width: 400px;
   height: 600px;
   border: 1px solid lightblue;
-  background-color : grey;
+  
 }
 .buttonP{
   background-color : lightgreen;
   border-radius: 50%;
 }
+.input{
+
+  background-color : lightgreen;
+  border-radius: 5%;
+}
+
+.select{
+  border :2px solid lightgreen;
+  border-radius: 5%;
+}
 
 .shopList{
+ 
   background-color: lightslategray;
 }
 .techList{
